--- a/layout/index.html
+++ b/layout/index.html
@@ -15,22 +15,22 @@
        <li>contact</li>
        <li>service</li>
        <li>registration</li>
-    </ul> 
+        </ul> 
     </nav>
     <div class="main">
-    <div class="content">
-     <h1>Javeria Ahmed</h1>
-     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos non corrupti, dolorum pariatur quae quaerat? Repellat asperiores, vel deserunt quis enim animi at! Ducimus, officiis quidem? Rerum voluptates doloribus vero.
-     Omnis delectus quam, quidem eius ducimus magni architecto sequi earum et error asperiores repellat sunt ut saepe accusamus dicta harum eaque facere veniam id! Animi inventore eius eveniet iste dolore.
-     Illo vel repellendus quo laboriosam excepturi veritatis fugit ad, magnam reprehenderit ipsam et, quos perferendis praesentium officiis dolorum debitis voluptatem blanditiis animi quod totam accusantium dolore perspiciatis soluta. Voluptas, et.
-     Voluptate at recusandae ratione doloremque id? Cumque asperiores est voluptates tenetur reprehenderit aspernatur aperiam impedit eaque aliquam fuga modi ullam reiciendis, voluptas veritatis? Quo, laborum illum enim quibusdam veritatis fuga.
-     Labore ratione hic totam officia neque quo possimus doloribus asperiores at tempore autem quaerat sit accusamus, ipsum laboriosam consequatur debitis error quasi officiis harum repellendus. Vero quos quae ex consequatur.
-     </p>
-     <button>Contact Us</button>
-     </div>
-     </div>
-     <div class="rightside"></div>
-     <img src="https://img.freepik.com/free-vector/laptop-with-program-code-isometric-icon-software-development-programming-applications-dark-neon_39422-971.jpg?semt=ais_hybrid&w=740&q=80">
+        <div class="content">
+            <h1>Javeria Ahmed</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos non corrupti, dolorum pariatur quae quaerat? Repellat asperiores, vel deserunt quis enim animi at! Ducimus, officiis quidem? Rerum voluptates doloribus vero.
+            Omnis delectus quam, quidem eius ducimus magni architecto sequi earum et error asperiores repellat sunt ut saepe accusamus dicta harum eaque facere veniam id! Animi inventore eius eveniet iste dolore.
+            Illo vel repellendus quo laboriosam excepturi veritatis fugit ad, magnam reprehenderit ipsam et, quos perferendis praesentium officiis dolorum debitis voluptatem blanditiis animi quod totam accusantium dolore perspiciatis soluta. Voluptas, et.
+            Voluptate at recusandae ratione doloremque id? Cumque asperiores est voluptates tenetur reprehenderit aspernatur aperiam impedit eaque aliquam fuga modi ullam reiciendis, voluptas veritatis? Quo, laborum illum enim quibusdam veritatis fuga.
+            Labore ratione hic totam officia neque quo possimus doloribus asperiores at tempore autem quaerat sit accusamus, ipsum laboriosam consequatur debitis error quasi officiis harum repellendus. Vero quos quae ex consequatur.
+            </p>
+            <button>Contact Us</button>
+        </div>
+        <div class="rightside">
+            <img src="https://img.freepik.com/free-vector/laptop-with-program-code-isometric-icon-software-development-programming-applications-dark-neon_39422-971.jpg?semt=ais_hybrid&w=740&q=80">
+        </div>
     </div>
-</div>
-     
+</body>
+</html>
